--- a/lab5/exercise12_1/pom.xml
+++ b/lab5/exercise12_1/pom.xml
@@ -3,9 +3,12 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>cs544</groupId>
-	<artifactId>exercise6_2</artifactId>
+	<artifactId>exercise12_1</artifactId>
 	<version>1.0-SNAPSHOT</version>
 	<packaging>jar</packaging>
+
+	<name>exercise12_1</name>
+	<url>http://maven.apache.org</url>
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -24,5 +27,6 @@
 			<artifactId>spring-context</artifactId>
 			<version>4.2.2.RELEASE</version>
 		</dependency>
+
 	</dependencies>
 </project>
